--- a/2024.html
+++ b/2024.html
@@ -20,17 +20,12 @@ limitations under the License.
 
 <head>
   <meta charset="utf-8">
-  <title>Coffee</title>
-  <link rel="canonical" href="https://www.minnowspace.com/coffee.html">
+  <title>Black Doves Review</title>
+  <link rel="canonical" href="https://www.minnowspace.com/blackdoves.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="google-adsense-account" content="ca-pub-3239465181490887">
 
-  <meta name="description"
-    content="Tea - MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
-  <meta name="keywords"
-    content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
-  <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
 <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
@@ -2421,193 +2416,85 @@ limitations under the License.
   <!-- End Sidebar -->
   <!-- End Navbar -->
 
-  <div class="center">
-
-    <!-- Start Fullpage Hero -->
-    <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-      <amp-img width="404" height="720" alt="Welcome to coffee wonderland" layout="responsive"
-        src="./img/coffee/pexels-adam-lukac-254247-773958.jpg" media="(max-width: 415px)"></amp-img>
-      <amp-img height="720" alt="coffee beans" layout="fixed-height"
-        src="./img/coffee/pexels-adam-lukac-254247-773958.jpg" media="(min-width: 416px)"></amp-img>
-      <figcaption class="absolute top-0 right-0 bottom-0 left-0">
-        <header class="p3">
-          <h1 class="ampstart-fullpage-hero-heading mb3">
-            <span class="ampstart-fullpage-hero-heading-text">
-              <span class="h6 block caps" style="color:rgb(255, 255, 255)"></span><span class="h1 block bold caps my1"
-                style="color:rgb(253, 253, 253)">17 Easy & Affordable Coffee Drinks </span><span class="h6 block caps"
-                style="color:rgb(255, 255, 255);background-color:#000 ">Don't worry you're not a coffee snob. You
-                just like things that are good.</span>
-            </span>
-          </h1>
-
-        </header>
-        <footer class="absolute left-0 right-0 bottom-0">
-          <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-            src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
-
-        </footer>
-
-      </figcaption>
-      <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-        src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
-    </figure>
-    <!-- End Fullpage Hero -->
-  </div>
 
   <main id="content" role="main">
     <article class="px3">
-      <h2 id="story" class="my4 theme2-anchored">Coffee Samples are a game changer</h2>
-      <p class="mb1 ampstart-dropcap">Are you ready to discover your next favorite coffee drinks? Sampling gourmet
-        coffee has never been easier or more affordable.
-        For just $3 each, you can experience expertly crafted roasts in convenient 2oz packs. Perfectly portioned, these
-        sample sizes allow you to try new flavors without committing to a full bag. Here's how you can brew up each one
-        of them for some gourmet realness.
-
-      </p>
-      <p class="mb1">
-
-
-        Delve into the world of gourmet coffee and find your perfect roast today! Start sampling here: Order Coffee
-        Samples. <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-          src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" /></p>
-
-
-
-      <p class="mb1">To highlight the unique characteristics of these coffee beans. Here’s what I’d make with one:
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">1. Cold Brew: Gabriel Cadavid's Caturra
-          Washed</a>
-
-        <br> Why: The cantaloupe, nectarine, and citrus notes magnify as it cools, making it ideal for cold brew.
-        Beverage: Served over ice to bring out its bright, refreshing flavors.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          2. French Press: Edinson Villa Loayza's French Roast</a>
-        <br> Why: Its bittersweet chocolate, caramel, and walnut flavors shine in the bold, rich texture of a French
-        press.
-        Beverage: A robust cup perfect for those who enjoy depth and intensity.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          3. Pour-Over: Martin Tapias's Castillo Washed</a>
-        <br> Why: This vibrant, balanced coffee with cantaloupe and clementine notes benefits from the clarity of a
-        pour-over.
-        Beverage: A clean, crisp cup to savor every nuance.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          4. Cappuccino: Espresso Roast</a>
-        <br> Why: Its balance of sweetness and complexity complements the creamy texture of steamed milk.
-        Beverage: A classic cappuccino with a silky foam top.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          5. Flat White: Edinson Villa Loayza's Geisha Caturra Washed</a>
-        <br> Why: The bright citrus and red apple notes pair beautifully with the velvety microfoam in a flat white.
-        Beverage: A smooth, balanced drink.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          6. Espresso Shot: Pablo Bonilla's Catuai Natural</a>
-        <br> Why: Black grapes, dark chocolate, and dried prunes create a decadent, concentrated shot of espresso.
-        Beverage: A bold espresso for an intense flavor experience.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          7. Iced Latte: Edinson Villa Loayza's Junin Natural</a>
-        <br> Why: The tropical flavors of mango, passionfruit, and papaya add a refreshing twist to an iced latte.
-        Beverage: Served over ice with milk for a sweet and fruity delight.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          8. Aeropress: Pablo Bonilla's Natural Anaerobic</a>
-        <br> Why: The anaerobic process creates a complex, fruit-forward coffee with hints of mango, passionfruit, and
-        tamarind that
-        are enhanced by the Aeropress's concentrated brewing method.
-        Beverage: A dynamic cup that’s both bright and flavorful.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          9. Black Coffee: Ephrem Kebede's Limu Washed</a>
-        <br> Why: Its layered notes of citrus, hibiscus, passion fruit, and raspberry are best enjoyed black to fully
-        appreciate its
-        Ethiopian complexity.
-        Beverage: A pure, unadulterated experience.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          10. Affogato: Antonio Barrantes Zuniga's Yellow Honey</a>
-        <br> Why: The lychee, papaya, and black currant flavors pair exquisitely with a scoop of vanilla ice cream.
-        Beverage: A luxurious dessert coffee.
-        These 10 beverages showcase the diversity and richness of these exceptional beans, each thoughtfully paired with
-        a
-        preparation method to maximize its unique flavor profile.
+      <h2 id="story" class="my4 theme2-anchored">Black Doves Review</h2>
+      <p class="mb1 ampstart-dropcap"> Black Doves, a Netflix spy thriller starring Keira Knightley, premiered on
+        December 5, 2024. The series combines
+        elements of espionage, action, and drama, centered around a covert operative caught between her personal life
+        and
+        dangerous missions. Knightley’s character becomes entangled in a high-stakes narrative with themes of betrayal
+        and
+        survival.
       </p>
 
-      <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
-      <amp-image-lightbox id="lightbox" layout="nodisplay"></amp-image-lightbox>
-      <amp-carousel class="my2 mxn3" height="200" layout="fixed-height" type="carousel">
-        <amp-img src="./img/coffee/pexels-chevanon-302899.jpg" width="300" height="200" alt="Dining area"
-          on="tap:lightbox" role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/coffee/pexels-chevanon-333523.jpg" width="267" height="200" alt="Bar area" on="tap:lightbox"
-          role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/coffee/pexels-lood-goosen-508841-1235706.jpg" width="300" height="200"
-          alt="Caramel Banana Waffles" on="tap:lightbox" role="button" tabindex="0"></amp-img>
-        <amp-img src="./img/coffee/pexels-olof-nyman-366625-1710023.jpg" width="300" height="200" alt="Pumpkin Soup"
-          on="tap:lightbox" role="button" tabindex="0"></amp-img>
-      </amp-carousel>
+      <p class="mb1">
+      </p>
 
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          11. Iced Americano: Pablo Bonilla's Catuai Honey</a>
-        <br> Why: Juicy clementine, tart cranberry, and pomegranate flavors make this coffee perfect for a light,
-        refreshing iced
-        Americano.
-        Beverage: Brewed as an espresso and topped with cold water over ice.
+      <p class="mb1">Netflix's Black Doves is a high-octane espionage series that's already making waves with critics
+        and audiences
+        alike.
+        The show stars Keira Knightley as a fiercely intelligent and enigmatic operative balancing a life filled with
+        danger and
+        deception. Knightley's portrayal of a deeply layered character has been hailed as both intense and vulnerable,
+        perfectly
+        suited for the morally complex world of international espionage.
       </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          12. Mocha: Edinson Villa Loayza's French Roast</a>
-        <br> Why: The bittersweet chocolate and molasses notes complement the chocolate syrup in a mocha.
-        Beverage: A rich, creamy mocha with whipped cream on top.
+
+      <p class="mb1">Set against the backdrop of modern London, the series weaves a tale of betrayal, secret missions,
+        and
+        high-stakes drama.
+        With Ben Whishaw adding his trademark gravitas and Sarah Lancashire commanding the screen in a pivotal role, the
+        ensemble cast delivers performances that keep you on the edge of your seat.
       </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          13. Turkish Coffee: Edinson Villa Loayza's Junin Anaerobic</a>
-        <br> Why: The tropical fruit bomb flavors of mango, passionfruit, and papaya shine in this concentrated,
-        traditional
-        preparation.
-        Beverage: Finely ground and brewed with sugar for a thick, sweet coffee experience.
+      <div class="my4 mxn3 center">
+
+        <!-- Start Image with heading -->
+        <figure class="ampstart-image-with-heading  m0 relative mb4">
+          <a href="https://www.netflix.com/watch/81931248?trackId=251726442">
+
+            <amp-img src="./img/blackdoves/Black_Peace_Dove.svg.webp" width="670" height="599" alt="Peace Dove"
+              layout="responsive" style="background:#fff"></amp-img>
+          </a>
+          <figcaption class="absolute right-0 bottom-0 left-0">
+            <header class="ampstart-image-heading px2 py2 line-height-4">
+              <h2 class="h1 bold" style="color:red">Watch the trailer here!</h2><a
+                href="https://www.netflix.com/watch/81931248?trackId=251726442">
+                <p class="h4" style="color:red">Click Me!</p>
+              </a>
+            </header>
+          </figcaption>
+        </figure>
+        <!-- End Image with heading -->
+
+      </div>
+
+      <p class="mb1">The show doesn’t shy away from exploring personal relationships amidst the chaos, adding emotional
+        stakes to the
+        action-packed narrative. Intrigue and surprises abound, with stylish cinematography and a gripping pace that
+        make this a
+        must-watch.</p>
+      <p class="mb1">Critics have lauded Black Doves for its ability to seamlessly blend intense action sequences with
+        thought-provoking
+        themes about trust, loyalty, and survival. It's no wonder Netflix renewed it for a second season before the
+        first even
+        concluded.
       </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          14. Macchiato: Oumer Derbaye's Nensebo Natural</a>
-        <br> Why: Its cranberry, raspberry, and white peach notes pair beautifully with a dollop of foam, keeping the
-        focus on the
-        coffee.
-        Beverage: A traditional macchiato, showcasing its sweet and tart profile.
+
+
+      <p class="mb1">The show features an impressive cast, including Ben Whishaw and Sarah Lancashire, and has received
+        strong
+        critical
+        acclaim. On Rotten Tomatoes, it boasts a 98% approval rating, praised for its unique storytelling and
+        genre-blending
+        approach. Netflix has already renewed the series for a second season, reflecting its early success.
+
+        If you're a fan of intense action and complex character dynamics, this could be a great series to check out!</p>
+      <p class="mb1"><a href="https://www.kqzyfj.com/click-101316119-11430556">
+          <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="glass of iced tea"
+            border="0" /></a>
       </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          15. Nitro Cold Brew: Antonio Barrantes Zuniga's Tipica Honey</a>
-        <br> Why: Its citrus, red apple, and pear notes pop when infused with nitrogen for a creamy, fizzy cold brew.
-        Beverage: Served chilled, with a cascading nitro effect for a smooth finish.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          16. Decaf Latte: Abdul Wahid's Swiss Water Decaf</a>
-        <br> Why: This decaf is bursting with flavor, making it an excellent choice for a creamy, guilt-free latte.
-        Beverage: A smooth latte with steamed milk, ideal for evening enjoyment.
-      </p>
-      <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">
-          17. Specialty Cold Brew Mocktail: Eivy Monroy's Geisha Honey</a>
-        <br> Why: Its anaerobic and aerobic fermentation yields a complex cup with a balance of tropical and fermented
-        flavors that
-        works wonderfully in a mocktail.
-        Beverage: Mixed with sparkling water, a dash of honey, and a spritz of lime for a refreshing treat.
 
     </article>
   </main>
