--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ limitations under the License.
 
   <meta charset="utf-8" />
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="https://www.minnowspace.com" />
+  <link rel="canonical" href="https://minnowspace.com/" />
   <meta name="viewport" content="width=device-width" />
   <meta name="description"
     content="MINNOWSPACE is a communal website that encourages decentralized ownership and a shared economy.">
@@ -3622,7 +3622,7 @@ limitations under the License.
   <section class="land-see-story-detail relative mx-auto mb4 pt2">
     <div class="mx-auto center land-see-post-item land-see-post-item-wide land-see-story">
       <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1"
-        href="stories.amp.html?category&#x3D;fashion#land-see-fashion"></a>
+        href="#"></a>
       <h1 class="land-see-hero-title ampstart-title-lg bold pt2 mx2">
         <a class="text-decoration-none" href="index.html">Minnowspace</a>
       </h1>
