--- a/tea.html
+++ b/tea.html
@@ -2441,7 +2441,7 @@ limitations under the License.
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-          <a href="https://www.kqzyfj.com/click-101316119-11430556">
+          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
             <img src="https://www.ftjcfx.com/image-101316119-11430556" width="300" height="250" alt="" border="0" /></a>
 
         </footer>
@@ -2467,7 +2467,7 @@ limitations under the License.
         while practicing guitar. The bold, invigorating flavor matched the rhythm of the waves and the cool breeze from
         the
         ocean, creating moments that felt like pure inspiration. It's a real Boston tea party up in there.</p>
-      <a href="https://www.kqzyfj.com/click-101316119-11430556">
+      <a rel ="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
 
         <img src="./img/tea/pexels-pixabay-460257.webp" width="300" height="250" alt="" border="0" /></a>
       <p class="mb1">
@@ -2531,14 +2531,14 @@ limitations under the License.
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <a href="https://www.kqzyfj.com/click-101316119-11430556">
+          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101316119-11430556">
 
             <amp-img src="./img/tea/pexels-d-ng-nhan-324384-1477542.webp" width="600" height="450"
               alt="Happy Hour Monday through Friday 5 PM" layout="responsive"></amp-img>
           </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
-              <h2 class="h1 bold">Follow the Link to Find Some Amazing Tea!</h2><a
+              <h2 class="h1 bold">Follow the Link to Find Some Amazing Tea!</h2><a rel ="sponsored"
                 href="https://www.kqzyfj.com/click-101316119-11430556">
                 <p class="h4">Click Me!</p>
               </a>
