--- a/yotu.html
+++ b/yotu.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="canonical" href="https://www.minnowspace.com/yotu.html">
+    <link rel="canonical" href="https://minnowspace.com/yotu.html">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
 <meta name="viewport" content="width=device-width">
     <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
