--- a/hotels.html
+++ b/hotels.html
@@ -2441,7 +2441,7 @@ limitations under the License.
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-          <a href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the Best Las Vegas
+          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the Best Las Vegas
             Hotel
             Deals!</a><img src="https://www.tqlkg.com/image-101317164-10437077" width="1" height="1" border="0" />
 
@@ -2480,7 +2480,7 @@ limitations under the License.
         sensory overload.
 
       </p>
-      <a href="https://www.kqzyfj.com/click-101317164-10437077">
+      <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
 
         <img src="./img/hotels/pexels-david-vives-1474251-5402912.jpg" width="300" height="500" alt="" border="0" /></a>
       <p class="mb1">
@@ -2581,14 +2581,14 @@ limitations under the License.
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <a href="https://www.kqzyfj.com/click-101317164-10437077">
+          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
 
             <amp-img src="./img/hotels/pexels-giona-mason-1751396-19045706.jpg" width="280" height="470"
               alt="Happy Hour Monday through Friday 5 PM" layout="responsive"></amp-img>
           </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
-              <h2 class="h1 bold">Follow the Link to Find Some Amazing Hotels!</h2><a
+              <h2 class="h1 bold">Follow the Link to Find Some Amazing Hotels!</h2><a rel ="sponsored"
                 href="https://www.kqzyfj.com/click-101317164-10437077">
                 <p class="h4">Click Me!</p>
               </a>
