affiliate links verbiage

--- a/coffee.html
+++ b/coffee.html
@@ -33,8 +33,8 @@ limitations under the License.
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
   <style amp-boilerplate="">
@@ -2442,14 +2442,14 @@ limitations under the License.
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-          <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-            src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
+          <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee
+            samples</a><img src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
 
         </footer>
 
       </figcaption>
-      <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-        src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
+      <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee
+        samples</a><img src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" />
     </figure>
     <!-- End Fullpage Hero -->
   </div>
@@ -2468,15 +2468,16 @@ limitations under the License.
 
 
         Delve into the world of gourmet coffee and find your perfect roast today! Start sampling here: Order Coffee
-        Samples. <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee samples</a><img
-          src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" /></p>
+        Samples. <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">shop coffee
+          samples</a><img src="https://www.ftjcfx.com/image-101317164-15200946" width="1" height="1" border="0" /></p>
 
 
 
       <p class="mb1">To highlight the unique characteristics of these coffee beans. Here’s what I’d make with one:
       </p>
       <p class="mb1">
-        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">1. Cold Brew: Gabriel Cadavid's Caturra
+        <a rel="sponsored" href="https://www.tkqlhce.com/click-101317164-15200946" target="_top">1. Cold Brew: Gabriel
+          Cadavid's Caturra
           Washed</a>
 
         <br> Why: The cantaloupe, nectarine, and citrus notes magnify as it cools, making it ideal for cold brew.
@@ -2617,7 +2618,7 @@ limitations under the License.
 
 
     <small>
-      © MINNOWSPACE 2024
+      © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
   <!-- End Footer -->
