--- a/hotels.html
+++ b/hotels.html
@@ -32,8 +32,8 @@ limitations under the License.
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
 
@@ -2441,7 +2441,8 @@ limitations under the License.
 
         </header>
         <footer class="absolute left-0 right-0 bottom-0">
-          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the Best Las Vegas
+          <a rel="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077" target="_top">Click Here for the
+            Best Las Vegas
             Hotel
             Deals!</a><img src="https://www.tqlkg.com/image-101317164-10437077" width="1" height="1" border="0" />
 
@@ -2480,7 +2481,7 @@ limitations under the License.
         sensory overload.
 
       </p>
-      <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
+      <a rel="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
 
         <img src="./img/hotels/pexels-david-vives-1474251-5402912.jpg" width="300" height="500" alt="" border="0" /></a>
       <p class="mb1">
@@ -2581,14 +2582,14 @@ limitations under the License.
 
         <!-- Start Image with heading -->
         <figure class="ampstart-image-with-heading  m0 relative mb4">
-          <a rel ="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
+          <a rel="sponsored" href="https://www.kqzyfj.com/click-101317164-10437077">
 
             <amp-img src="./img/hotels/pexels-giona-mason-1751396-19045706.jpg" width="280" height="470"
               alt="Happy Hour Monday through Friday 5 PM" layout="responsive"></amp-img>
           </a>
           <figcaption class="absolute right-0 bottom-0 left-0">
             <header class="ampstart-image-heading px2 py2 line-height-4">
-              <h2 class="h1 bold">Follow the Link to Find Some Amazing Hotels!</h2><a rel ="sponsored"
+              <h2 class="h1 bold">Follow the Link to Find Some Amazing Hotels!</h2><a rel="sponsored"
                 href="https://www.kqzyfj.com/click-101317164-10437077">
                 <p class="h4">Click Me!</p>
               </a>
@@ -2639,7 +2640,7 @@ limitations under the License.
 
 
     <small>
-      © MINNOWSPACE 2024
+      © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
   <!-- End Footer -->
