--- a/index.html
+++ b/index.html
@@ -1496,10 +1496,10 @@ limitations under the License.
 
     body {
       background-image: url(./img/main/pexels-chevanon-325045.jpg);
-       background-color: rgba(249, 223, 241, 0.7);
-    background-blend-mode: lighten;
-      background-position:center;
-      background-size:300vh;
+      background-color: rgba(249, 223, 241, 0.7);
+      background-blend-mode: lighten;
+      background-position: center;
+      background-size: 300vh;
       background-repeat: no-repeat;
       color: #000000;
       font-family: Crimson Text, times, serif;
@@ -3626,13 +3626,12 @@ limitations under the License.
 
   <section class="land-see-story-detail relative mx-auto mb4 pt2">
     <div class="mx-auto center land-see-post-item land-see-post-item-wide land-see-story">
-      <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1"
-        href="#"></a>
+      <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1" href="#"></a>
       <h1 class="land-see-hero-title ampstart-title-lg bold pt2 mx2">
         <a class="text-decoration-none" href="index.html">Minnowspace</a>
       </h1>
       <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 px2 mb3">
-        <h2>Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.</h2>
+      <h2>Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.</h2>
       </p>
 
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
@@ -3642,9 +3641,9 @@ limitations under the License.
 
     <h2 class="land-see-story-subtitle ampstart-subtitle bold max-width-3 mx-auto pb0 pt4 px4">
       Welcome to MinnowSpace!
-        <div>
-       
-          <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
+      <div>
+
+        <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
     </h2>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
       <b>Minnowspace is your destination for creativity, connection, and community. It’s a space where stories,
@@ -3653,13 +3652,14 @@ limitations under the License.
         core,
         Minnowspace is all about people—empowering individuals to share their voices while creating a platform where the
         rewards
-        are shared.  We may be small fish but we don't have to play in a small pond. With modern technnology we will build a community platform with video and chat that is co-owned by YOU, not some bazillionaire. 
+        are shared. We may be small fish but we don't have to play in a small pond. With modern technnology we will
+        build a community platform with video and chat that is co-owned by YOU, not some bazillionaire.
     </p>
-  <amp-fx-flying-carpet height="300px">
-    <amp-img alt="Minnowspace" class="cover" width="340" height="515" layout="fixed"
-      src="./img/main/pexels-chevanon-325045.jpg">
-    </amp-img>
-  </amp-fx-flying-carpet>
+    <amp-fx-flying-carpet height="300px">
+      <amp-img alt="Minnowspace" class="cover" width="340" height="515" layout="fixed"
+        src="./img/main/pexels-chevanon-325045.jpg">
+      </amp-img>
+    </amp-fx-flying-carpet>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
 
       This is just the start of an exciting journey. Minnowspace is built on the idea of collaboration and creativity,
@@ -3672,11 +3672,11 @@ limitations under the License.
       a
       great brand—you’re helping fuel the growth of Minnowspace.
     </p>
-  <amp-fx-flying-carpet height="300px">
-    <amp-img alt="Minnowspace" class="cover" width="340" height="515" layout="fixed"
-      src="./img/main/pexels-chevanon-325045.jpg">
-    </amp-img>
-  </amp-fx-flying-carpet>
+    <amp-fx-flying-carpet height="300px">
+      <amp-img alt="Minnowspace" class="cover" width="340" height="515" layout="fixed"
+        src="./img/main/pexels-chevanon-325045.jpg">
+      </amp-img>
+    </amp-fx-flying-carpet>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
       Join us on this journey and stay tuned for exciting developments. Together, we’re building something
       extraordinary..</p>
@@ -3969,8 +3969,8 @@ limitations under the License.
       </ul>
     </nav>
     <small>
-      © MINNOWSPACE, 2024 •
-      <a class="text-decoration-none" href="index.html">Terms &amp; Conditions</a>
+      © Minnowspace 2024 - •
+      <a class="text-decoration-none" href="index.html">Terms &amp; Conditions. Site contains affiliate links</a>
     </small>
   </footer>
   <!-- End Footer -->
