--- a/stories.amp.html
+++ b/stories.amp.html
@@ -3840,8 +3840,8 @@ limitations under the License.
     </ul>
 
     <small>
-      © MINNOWSPACE, 2024 •
-      <a class="text-decoration-none" href="https://www.cj.com/contact-us">Terms &amp; Conditions</a>
+      © Minnowspace 2024 - •
+      <a class="text-decoration-none" href="https://www.cj.com/contact-us">Terms &amp; Conditions.  Site contains affiliate links</a>
     </small>
   </footer>
   <!-- End Footer -->
