--- a/2025.html
+++ b/2025.html
@@ -28,8 +28,8 @@ limitations under the License.
 
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
   <style amp-boilerplate="">
@@ -2504,7 +2504,7 @@ limitations under the License.
 
 
     <small>
-      © MINNOWSPACE 2024
+      © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
   <!-- End Footer -->
