--- a/drones.html
+++ b/drones.html
@@ -2457,8 +2457,8 @@ limitations under the License.
 
   <main id="content" role="main">
     <amp-youtube data-videoid="5xngnT592Kc" layout="responsive" width="480" height="270"></amp-youtube>
-        <amp-youtube data-videoid="KCJbIbySmk4" layout="responsive" width="480" height="270"></amp-youtube>
-    
+    <amp-youtube data-videoid="KCJbIbySmk4" layout="responsive" width="480" height="270"></amp-youtube>
+
     <a href="https://amzn.to/3BC6FMF" target="_blank"
       style="background-image:url(./img/drones/d6mxwh6-ff14427e-8e59-4ed2-b421-78306032ed22.png); background-size:cover; background-position:center; background-repeat:no-repeat; color:rgb(0, 0, 0); height:6.5rem; line-height:3.5rem; text-align:center; text-decoration:none; display:block; border-radius:2em; font-size:1.5rem; color:aliceblue">
       Click Here For Amazing drones on Amazon!
@@ -2482,7 +2482,7 @@ limitations under the License.
         and the other
         reindeer are worried that drones will take over their jobs. Just don't name your drone Comet.
       </p>
-    <amp-youtube data-videoid="ydU19E_ACpU" layout="responsive" width="480" height="270"></amp-youtube>
+      <amp-youtube data-videoid="ydU19E_ACpU" layout="responsive" width="480" height="270"></amp-youtube>
 
 
       <h2 id="gallery" class="my4 theme2-anchored">Photo Gallery</h2>
@@ -2611,7 +2611,7 @@ limitations under the License.
 
 
         <small>
-          © MINNOWSPACE 2024
+          © Minnowspace 2024 - Site contains affiliate links
         </small>
       </footer>
       <!-- End Footer -->
