--- a/plaid.html
+++ b/plaid.html
@@ -32,8 +32,8 @@ limitations under the License.
     content="MINNOWSPACE, MINNOW, SPACE, COMMUNITY, COMMUNAL, DECENTRALIZED, SHARED, ECONOMY, WEBSITE, WEB, PAGE, PAGES, INTERNET, ONLINE, PLATFORM, PLATFORMS, SOCIAL, MEDIA, SOCIAL MEDIA, SOCIAL PLATFORM, SOCIAL PLATFORMS, SOCIAL MEDIA PLATFORM">
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
 
@@ -115,11 +115,13 @@ limitations under the License.
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700%7CLora%7CLato" rel="stylesheet">
 
   <style amp-custom>
-     .img-background {
+    .img-background {
       background-image: url(./img/plaid/xmasplaid.webp);
       background-size: 250%;
 
-        }   /*! Bassplate | MIT License | https://github.com/basscss/bassplate */
+    }
+
+    /*! Bassplate | MIT License | https://github.com/basscss/bassplate */
 
     /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
     html {
@@ -2694,7 +2696,7 @@ limitations under the License.
 
 
     <small>
-      © MINNOWSPACE 2024
+      © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
   <!-- End Footer -->
