--- a/rschocolate.html
+++ b/rschocolate.html
@@ -31,8 +31,8 @@ limitations under the License.
   <meta name="author" content="MINNOWSPACE">
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
-<script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 
   <style amp-boilerplate="">
@@ -2583,7 +2583,7 @@ limitations under the License.
 
 
     <small>
-      © MINNOWSPACE 2024
+      © Minnowspace 2024 - Site contains affiliate links
     </small>
   </footer>
   <!-- End Footer -->
